synchronize message properties

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_es.properties
@@ -50,11 +50,12 @@ selectServerGroupsFor=Seleccionar grupos de servidores para {0}
 server_config_stillRunning=La instancia del servidor todav\u00eda est\u00e1 ejecutando\: {0}
 server_reload_confirm=\u00bfQuiere volver a cargar la configuraci\u00f3n del servidor para el servidor {0}?
 serversRunningOnHost=Disponibilidad del servidor en el host\: {0}
-subsys_configadmin_remove=Borrar datos de administraci\u00f3n de configuraci\u00f3n
-subsys_configadmin_removeConfirm=\u00bfBorrar datos de administraci\u00f3n de la configuraci\u00f3n para PID\: {0}?
 subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
 subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_remove=Borrar datos de administraci\u00f3n de configuraci\u00f3n
+subsys_configadmin_removeConfirm=\u00bfBorrar datos de administraci\u00f3n de la configuraci\u00f3n para PID\: {0}?
 subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
 subsys_jca_err_ds_notEnabled=Fuente de datos no habilitada\: {0}
 subsys_jpa_err_mericDisabled=M\u00e9trica no habilitada en {0}
 subsys_messaging=Proveedor de mensajer\u00eda\: {0}
