--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_fr.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_fr.properties
@@ -50,11 +50,12 @@ selectServerGroupsFor=S\u00e9lectionner les groupes de serveurs pour {0}
 server_config_stillRunning=L&#39;instance sur serveur est toujours en cours d&#39;ex\u00e9cution \: {0}
 server_reload_confirm=Souhaitez-vous charger \u00e0 nouveau la configuration de serveur pour {0}?
 serversRunningOnHost=Disponibilit\u00e9 du serveur sur h\u00f4te \: {0}
-subsys_configadmin_remove=Supprimer Configuration Admin Data
-subsys_configadmin_removeConfirm=Supprimer Configuration Admin Data pour PID \: {0} ?
 subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
 subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_remove=Supprimer Configuration Admin Data
+subsys_configadmin_removeConfirm=Supprimer Configuration Admin Data pour PID \: {0} ?
 subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
 subsys_jca_err_ds_notEnabled=Source de donn\u00e9es non activ\u00e9e \: {0}
 subsys_jpa_err_mericDisabled=Param\u00e8tre m\u00e9trique non activ\u00e9 sur {0}
 subsys_messaging=Fournisseur de message \: {0}
@@ -72,4 +73,4 @@ successDisabled=Succ\u00e8s \: d\u00e9sactivation de {0}.
 successEnabled=Succ\u00e8s \: activation de {0}.
 successful=Succ\u00e8s \: {0}
 temporarilyUnavailable=Non disponible pour l&#39;instant, veuillez essayer \u00e0 nouveau.
-unknown_error=Erreur Inconnu
+unknown_error=Erreur InconnuUnknown Error
