--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_ja.properties
@@ -50,11 +50,12 @@ selectServerGroupsFor={0} \u306B\u30B5\u30FC\u30D0\u30FC\u30B0\u30EB\u30FC\u30D7
 server_config_stillRunning=\u30B5\u30FC\u30D0\u30FC\u30A4\u30F3\u30B9\u30BF\u30F3\u30B9\u304C\u7A3C\u52D5\u3057\u3066\u3044\u307E\u3059\: {0}
 server_reload_confirm=\u30B5\u30FC\u30D0\u30FC{0} \u306E\u30B5\u30FC\u30D0\u30FC\u8A2D\u5B9A\u3092\u518D\u8AAD\u307F\u8FBC\u307F\u3057\u307E\u3059\u304B\uFF1F
 serversRunningOnHost=\u30DB\u30B9\u30C8\u3067\u306E\u30B5\u30FC\u30D0\u30FC\u5229\u7528\u72B6\u6CC1 \: {0}
-subsys_configadmin_remove=\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u306E\u524A\u9664
-subsys_configadmin_removeConfirm=PID\: {0} \u306E\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
 subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
 subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_remove=\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u306E\u524A\u9664
+subsys_configadmin_removeConfirm=PID\: {0} \u306E\u8A2D\u5B9A\u7BA1\u7406\u30C7\u30FC\u30BF\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
 subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
 subsys_jca_err_ds_notEnabled=\u30C7\u30FC\u30BF\u30BD\u30FC\u30B9\u306F\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\uFF1A {0}
 subsys_jpa_err_mericDisabled={0} \u3067\u30E1\u30C8\u30EA\u30C3\u30AF\u304C\u6709\u52B9\u3067\u306F\u3042\u308A\u307E\u305B\u3093\u3002
 subsys_messaging=\u30E1\u30C3\u30BB\u30FC\u30B8\u30F3\u30B0\u30D7\u30ED\u30D0\u30A4\u30C0\u30FC\: {0}
@@ -72,4 +73,4 @@ successDisabled=\u6210\u529F\uFF1A{0} \u304C\u7121\u52B9\u306B\u306A\u308A\u307E
 successEnabled=\u6210\u529F\uFF1A{0} \u304C\u6709\u52B9\u306B\u306A\u308A\u307E\u3057\u305F\u3002
 successful=\u6210\u529F\uFF1A{0}
 temporarilyUnavailable=\u4E00\u6642\u7684\u306B\u5229\u7528\u3067\u304D\u307E\u305B\u3093\u3002\u518D\u8A66\u884C\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-unknown_error=\u4E0D\u660E\u306A\u30A8\u30E9\u30FC
+unknown_error=\u4E0D\u660E\u306A\u30A8\u30E9\u30FCUnknown Error
