--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_pt_BR.properties
@@ -50,11 +50,12 @@ selectServerGroupsFor=Selecionar grupos do servidor para {0}
 server_config_stillRunning=A inst\u00e2ncia do servidor ainda est\u00e1 rodando\: {0}
 server_reload_confirm=Voc\u00ea deseja recarregar a configura\u00e7\u00e3o do servidor para servidor {0}
 serversRunningOnHost=Disponibilidade do servidor no host\: {0}
-subsys_configadmin_remove=Remover os Dados Admin da Configura\u00e7\u00e3o
-subsys_configadmin_removeConfirm=Remover os Dados Administrativos da Configura\u00e7\u00e3o para PID\: {0}?
 subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
 subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
+subsys_configadmin_remove=Remover os Dados Admin da Configura\u00e7\u00e3o
+subsys_configadmin_removeConfirm=Remover os Dados Administrativos da Configura\u00e7\u00e3o para PID\: {0}?
 subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
 subsys_jca_err_ds_notEnabled=A Fonte de Dados n\u00e3o artivada.  {0}
 subsys_jpa_err_mericDisabled=A m\u00e9trica n\u00e3o \u00e9 ativada no {0}
 subsys_messaging=Provedor Message\: {0}
@@ -72,4 +73,4 @@ successDisabled=Sucesso\: desativado {0}.
 successEnabled=Sucesso\: ativado {0}.
 successful=Sucesso\: {0}
 temporarilyUnavailable=Indispon\u00edvel no momento, por favor tente novamente.
-unknown_error=Erro desconhecido
+unknown_error=Erro desconhecidoUnknown Error
