--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages_de.properties
@@ -51,10 +51,11 @@ server_config_stillRunning=Die Serverinstanz l\u00e4uft noch\: {0}
 server_reload_confirm=M\u00f6chten Sie die Serverkonfiguration f\u00fcr Server {0} neu laden?
 serversRunningOnHost=Serververf\u00fcgbarkeit am Host\: {0}
 subsys_configadmin_addNoPIDselected=TRANSLATE ME: Please select a PID before adding a value
+subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
 subsys_configadmin_remove=Konfiguration Admin Data entfernen
 subsys_configadmin_removeConfirm=Konfiguration Admin Daten f\u00fcr PID\: {0} entfernen?
-subsys_configadmin_oneValueRequired=TRANSLATE ME: A Configuration Admin PID must at least have one Configuration Value.
 subsys_configadmin_removeOnLastValueConfirm=TRANSLATE ME: No remaining configuration values. A PID must at least have one configuration value. Remove PID: {0}?
+subsys_jca_err_ds_enabled=The Data Source {0} is still enabled. Please disabled it, to make changes to the configuration.
 subsys_jca_err_ds_notEnabled=Datenquelle nicht aktiviert\: {0}
 subsys_jpa_err_mericDisabled=Metrik an {0} nicht aktiviert
 subsys_messaging=Messaging-Provider\: {0}
@@ -72,4 +73,4 @@ successDisabled=Erfolg\: {0} deaktiviert.
 successEnabled=Erfolg\: {0} aktiviert.
 successful=Erfolg\: {0}
 temporarilyUnavailable=Vor\u00fcbergehend nicht verf\u00fcgbar, bitte versuchen Sie es erneut.
-unknown_error=Unbekannter Fehler
+unknown_error=Unbekannter FehlerUnknown Error
