fix message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
@@ -186,23 +186,28 @@ subsys_ejb3_timerServiceRelativeTo=\u76F8\u5BFE\u30D1\u30B9subsys_infinispan_inv
 subsys_infinispan_aliases=\u30A8\u30A4\u30EA\u30A2\u30B9
 subsys_infinispan_aquireTimeout=\u53D6\u5F97\u30BF\u30A4\u30E0\u30A2\u30A6\u30C8 (\u30DF\u30EA\u79D2)
 subsys_infinispan_cache_container=\u30AD\u30E3\u30C3\u30B7\u30E5\u30B3\u30F3\u30C6\u30CA\u30FC
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
 subsys_infinispan_cache_containers=\u30AD\u30E3\u30C3\u30B7\u30E5\u30B3\u30F3\u30C6\u30CA\u30FC
 subsys_infinispan_cluster=\u30AF\u30E9\u30B9\u30BF\u30FC
 subsys_infinispan_concurrencyLevel=\u540C\u6642\u5B9F\u884C\u30EC\u30D9\u30EB
 subsys_infinispan_default_cache=\u30C7\u30D5\u30A9\u30EB\u30C8\u306E\u30AD\u30E3\u30C3\u30B7\u30E5
 subsys_infinispan_distributed=\u5206\u6563
 subsys_infinispan_distributedCache=\u5206\u6563\u30AD\u30E3\u30C3\u30B7\u30E5
+subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
 subsys_infinispan_eviction=\u30A8\u30D3\u30AF\u30B7\u30E7\u30F3
 subsys_infinispan_evictionExecutor=\u30A8\u30D3\u30AF\u30B7\u30E7\u30F3\u306E\u5B9F\u884C
 subsys_infinispan_evictionStrategy=\u30A8\u30D3\u30AF\u30B7\u30E7\u30F3\u6226\u7565
 subsys_infinispan_expiration=\u6709\u52B9\u671F\u9650
 subsys_infinispan_invalidationCache=\u7121\u52B9\u30AD\u30E3\u30C3\u30B7\u30E5
+subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
 subsys_infinispan_isolation=\u5206\u96E2
 subsys_infinispan_jndiName=JNDI \u540D
 subsys_infinispan_listenerExecutor=\u30EA\u30B9\u30CA\u30FC\u306E\u5B9F\u884C
 subsys_infinispan_localCache=\u30ED\u30FC\u30AB\u30EB\u30AD\u30E3\u30C3\u30B7\u30E5
+subsys_infinispan_local_cache_desc=A set of infinispan local caches.
 subsys_infinispan_locking=\u30ED\u30C3\u30AD\u30F3\u30B0
 subsys_infinispan_replicatedCache=\u30EC\u30D7\u30EA\u30B1\u30FC\u30C8\u3055\u308C\u305F\u30AD\u30E3\u30C3\u30B7\u30E5
+subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
 subsys_infinispan_replicationQueueExecutor=\u30EC\u30D7\u30EA\u30B1\u30FC\u30B7\u30E7\u30F3\u30AD\u30E5\u30FC\u306E\u5B9F\u884C
 subsys_infinispan_stateTransfer=\u30B9\u30C6\u30FC\u30BF\u30B9\u8EE2\u9001
 subsys_infinispan_striping=\u30B9\u30C8\u30EA\u30C3\u30D7
