--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
@@ -100,13 +100,13 @@ subsys_ee_desc=A configura\u00e7\u00e3o do sub-sistema EE. Ela fornece a habilid
 subsys_ejb3_beanpools_desc=Configura\u00e7\u00f5es do pool de bean para o recipiente EJB.
 subsys_ejb3_container_desc=A configura\u00e7\u00e3o da vis\u00e3o geral do sub-sistema ejb3. Essas configura\u00e7\u00f5es aplicam-se a todos os beans, a n\u00e3o ser que substitu\u00eddo na implanta\u00e7\u00e3o ou \u00e0 n\u00edvel do bean.
 subsys_ejb3_services_desc=Os servi\u00e7os configur\u00e1veis centralmente que fazem parte do sub-sistema EJB3.
-subsys_ejb3_threadpools_desc=As configura\u00e7\u00f5es do pool de segmenta\u00e7\u00e3o que est\u00e3o referenciadas pelos servi\u00e7os EJB.
-subsys_jacorb_desc=A configura\u00e7\u00e3o do sub-sistemaset of infinispan cache containers.
+subsys_ejb3_threadpools_desc=As configura\u00e7\u00f5es do pool de segmenta\u00e7\u00e3o que est\u00e3o referenciadas pelos servi\u00e7os EJB services.
+subsys_infinispan_cache_container_desc=A set of infinispan cache containers.
 subsys_infinispan_local_cache_desc=A set of infinispan local caches.
 subsys_infinispan_invalidation_cache_desc=A set of infinispan invalidation caches.
 subsys_infinispan_replicated_cache_desc=A set of infinispan replicated caches.
 subsys_infinispan_distributed_cache_desc=A set of infinispan distributed caches.
-subsys_jacorb_desc=The JacORB
+subsys_jacorb_desc=The JacORB subsystem configuration.
 subsys_jca_adminobject_desc=Os objetos de administra\u00e7\u00e3o para o adaptador de recurso.
 subsys_jca_boostrap_config_desc=O contexto bootstrap para adaptadores de recurso. Cada contexto referencia um gerenciador de trabalho.
 subsys_jca_common_config_desc=O sub-sistema da Arquitetura do Conectador Java EE fornecendo configura\u00e7\u00e3o geral para os adaptadores de recurso.
