abandon help images and move to inline links: work setter with a11y

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_en.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_en.properties
@@ -182,3 +182,5 @@ subsys_ws_endpoint_desc=Web Service Endpoints. Endpoints need to be deployed as 
 subys_tx_desc=The configuration of the transactions subsystem.
 subys_tx_metric_desc=These metrics reflect the current state of the transaction subsystem. If no metrics are shown, you might need to enable statistics for the transaction subsystem.
 subys_web_metric_desc=Metrics for the web subsystem.
+help_need_help=Need Help?
+help_close_help=Close Help
