synchronize message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -182,3 +182,5 @@ subsys_ws_endpoint_desc=Webdienst-Endpunkte. Endpunkte m\u00fcssen als regul\u00
 subys_tx_desc=Die Konfiguration des Transaktions-Untersystems.
 subys_tx_metric_desc=Diese Metrik reflektiert den aktuellen Status des Transaktions-Untersystems. Wird keine Metrik angezeigt, so k\u00f6nnen Sie m\u00f6glicherweise Statistiken f\u00fcr das Transaktions-Untersystem aktivieren.
 subys_web_metric_desc=Metrik f\u00fcr das Web-UntersystemMetrics for the web subsystem.
+help_need_help=Need Help?
+help_close_help=Close
