--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
@@ -182,3 +182,5 @@ subys_tx_desc=La configuraci\u00f3n del sub-sistema de transacciones.
 subys_tx_metric_desc=Esta m\u00e9trica refleja el estado actual del sub-sistema de transacciones. Si no se puede ver ninguna m\u00e9trica entonces es posible que tenga que habilitar las estad\u00edsticas para el sub-sistema de transacciones.
 subys_web_metric_desc=M\u00e9trica para el subsistema web subsystem.
 subsys_modcluster_desc=The modcluster configuration.
+help_need_help=Need Help?
+help_close_help=Close
