--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
@@ -427,3 +427,5 @@ subsys_ws_provider=\u30D7\u30ED\u30D0\u30A4\u30C0\u30FC
 subys_tx_desc=\u30C8\u30E9\u30F3\u30B6\u30AF\u30B7\u30E7\u30F3\u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u8A2D\u5B9A
 subys_tx_metric_desc=\u3053\u308C\u3089\u306E\u30E1\u30C8\u30EA\u30AF\u30B9\u306F\u3001\u30C8\u30E9\u30F3\u30B6\u30AF\u30B7\u30E7\u30F3\u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u73FE\u5728\u306E\u72B6\u614B\u3092\u53CD\u6620\u3057\u307E\u3059\u3002\u30E1\u30C8\u30EA\u30AF\u30B9\u304C\u8868\u793A\u3055\u308C\u3066\u3044\u306A\u3044\u5834\u5408\u306F\u3001\u30C8\u30E9\u30F3\u30B6\u30AF\u30B7\u30E7\u30F3\u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u7D71\u8A08\u3092\u6709\u52B9\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 subys_web_metric_desc=Web \u30B5\u30D6\u30B7\u30B9\u30C6\u30E0\u306E\u30E1\u30C8\u30EA\u30AF\u30B9Metrics for the web subsystem.
+help_need_help=Need Help?
+help_close_help=Close
