--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
@@ -182,3 +182,5 @@ subsys_ws_endpoint_desc=Pontos de Extremidade do Servi\u00e7o da Web. Os Pontos 
 subys_tx_desc=A configura\u00e7\u00e3o da sub-sistema das transa\u00e7\u00f5es.
 subys_tx_metric_desc=Essas m\u00e9tricas refletem do estado atual do sub-sistema da transa\u00e7\u00e3o. Voc\u00ea dever\u00e1 ativar as estat\u00edsticas para o sub-sistema, caso a nenhuma m\u00e9trica seja apresentada.
 subys_web_metric_desc=M\u00e9tricas para o sub-sistema da web subsystem.
+help_need_help=Need Help?
+help_close_help=Close
