--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
@@ -182,3 +182,5 @@ subsys_ws_endpoint_desc=Web Service Endpoints. Les points de terminaison doivent
 subys_tx_desc=La configuration du sous-syst\u00e8me de transactions.
 subys_tx_metric_desc=Ces param\u00e8tres m\u00e9triques refl\u00e8tent l&#39;\u00e9tat actuel du sous-syst\u00e8me de la transaction. Si aucun param\u00e8tre m\u00e9trique appara\u00eet, vous serez sans doute oblig\u00e9 d&#39;activer les statistiques du sous-syst\u00e8me de la transaction.
 subys_web_metric_desc=M\u00e9triques du sous-syst\u00e8me web subsystem.
+help_need_help=Need Help?
+help_close_help=Close
