--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_en.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_en.properties
@@ -14,6 +14,7 @@ common_label_addItem=Add Item
 common_label_addProperty=Add Property
 common_label_addToGroup=Add to Group
 common_label_addToGroups=Add to Groups
+common_label_updateContent=Update Content
 common_label_advanced=Advanced
 common_label_append=Append
 common_label_areYouSure=Are you sure?
