sync message bundles

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -13,7 +13,8 @@ common_label_addContent=Content hinzuf\u00fcgen
 common_label_addItem=Posten hinzuf\u00fcgen
 common_label_addProperty=Property hinzuf\u00fcgen
 common_label_addToGroup=Zur Gruppe hinzuf\u00fcgen
-common_label_addToGroups=Zu Gruppen hinzuf\u00fcgen
+common_label_addToGroups=Zu Gruppen hinzuf\u00fcgenAdd to Groups
+common_label_updateContent=Update Content
 common_label_advanced=FortgeschrittenAdvanced
 common_label_append=Anh\u00e4ngen
 common_label_areYouSure=Sind Sie sicher?
