--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_es.properties
@@ -13,7 +13,8 @@ common_label_addContent=Agregar contenido
 common_label_addItem=Agregar objeto
 common_label_addProperty=Agregar propiedad
 common_label_addToGroup=Agregar al grupo
-common_label_addToGroups=Agregar a los grupos
+common_label_addToGroups=Agregar a los gruposAdd to Groups
+common_label_updateContent=Update Content
 common_label_advanced=AvanzadoAdvanced
 common_label_append=Append
 common_label_areYouSure=\u00bfEst\u00e1 seguro?
