--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_fr.properties
@@ -13,7 +13,8 @@ common_label_addContent=Ajouter Contenu
 common_label_addItem=Ajouter Item
 common_label_addProperty=Ajouter Propri\u00e9t\u00e9
 common_label_addToGroup=Ajouter au groupe
-common_label_addToGroups=Ajouter aux groupes
+common_label_addToGroups=Ajouter aux groupesAdd to Groups
+common_label_updateContent=Update Content
 common_label_advanced=Avanc\u00e9Advanced
 common_label_append=Append
 common_label_areYouSure=\u00cates-vous certain ?
