--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_ja.properties
@@ -13,7 +13,8 @@ common_label_addContent=\u30B3\u30F3\u30C6\u30F3\u30C4\u306E\u8FFD\u52A0
 common_label_addItem=\u30A2\u30A4\u30C6\u30E0\u306E\u8FFD\u52A0
 common_label_addProperty=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u8FFD\u52A0
 common_label_addToGroup=\u30B0\u30EB\u30FC\u30D7\u3078\u8FFD\u52A0
-common_label_addToGroups=\u30B0\u30EB\u30FC\u30D7\u3078\u8FFD\u52A0
+common_label_addToGroups=\u30B0\u30EB\u30FC\u30D7\u3078\u8FFD\u52A0Add to Groups
+common_label_updateContent=Update Content
 common_label_advanced=\u8A73\u7D30Advanced
 common_label_append=Append
 common_label_areYouSure=\u3088\u308D\u3057\u3044\u3067\u3059\u304B\uFF1F
