--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_pt_BR.properties
@@ -13,7 +13,8 @@ common_label_addContent=Adicionar Conte\u00fado
 common_label_addItem=Adicionar Item
 common_label_addProperty=Adicionar Propriedade
 common_label_addToGroup=Adicionar Grupo
-common_label_addToGroups=Adicionar aos Grupos
+common_label_addToGroups=Adicionar aos GruposAdd to Groups
+common_label_updateContent=Update Content
 common_label_advanced=Avan\u00e7adoAdvanced
 common_label_append=Append
 common_label_areYouSure=Voc\u00ea tem certeza?
